--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=hr-worker
-server.port=8001
 
+
+# Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
-spring.datasource.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-spring.datasource.username=root
-spring.datasource.url=jdbc:derby:dbworker;create=true
-spring.jpa.hibernate.ddl-auto=update
