--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -23,6 +23,11 @@
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 			<version>2.2.6.RELEASE</version>
 		</dependency>
