--- a/hr-api-getway-zuul/src/main/resources/application.properties
+++ b/hr-api-getway-zuul/src/main/resources/application.properties
@@ -19,3 +19,6 @@ zuul.routes.oauth.service-id=hr-oauth
 zuul.routes.oauth.path=/hr-oauth/**
 
 zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
+
+#Test Cors
+#curl -v -X OPTIONS http://localhost:8765/hr-worker/api/v1/workers
