--- a/hr-api-getway-zuul/src/main/resources/application.properties
+++ b/hr-api-getway-zuul/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=hr-api-gateway-zuul
 server.port=8765
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#local
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#with docker
+eureka.client.service-url.defaultZone=http://hr-eureka-server:8761/eureka
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
