--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -6,7 +6,10 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://hr-eureka-server:8761/eureka
+
+
 
 # Database configuration 
 #spring.datasource.url=jdbc:h2:mem:testdb
